# eLog

./: .gitignore  README.md
backend/: README.md
elog_backend/: .env  Cargo.toml  README.md  elog-sample.yml
elog_backend/database/: initdb.sql
elog_backend/src/: authentication.rs  config.rs  error_handler.rs  error_mapper.rs  handlers.rs  lib.rs  main.rs  models.rs  route_config.rs  server_config.rs  utils.rs
elog_backend/src/elog/: register.rs
elog_backend/src/handlers/: app_user_handler.rs  expense_handler.rs  parameters.rs  pay_type_handler.rs  report_handler.rs  sample.rs  user_category_handler.rs  user_pay_method_handler.rs  user_pay_type_handler.rs  user_role_handler.rs
elog_backend/src/models/: app_user.rs  expense.rs  expense_report.rs  pay_type.rs  schema.rs  session_properties.rs  token.rs  user_category.rs  user_pay_method.rs  user_pay_type.rs  user_role.rs
elog_backend/src/utils/: database_utils.rs  env_variable_utils.rs  error_mapper.rs  http_request_utils.rs
elog_frontend/: README.md  package-lock.json  package.json
elog_frontend/public/: index.html
elog_frontend/src/: App.vue  main.js
elog_frontend/src/components/: Footer.vue  HelloWorld.vue  Login.vue  Logout.vue  Navbar.vue  Signup.vue
elog_frontend/src/helpers/: config.js  headers.js
elog_frontend/src/localization/: messages.js
elog_frontend/src/models/: schemas.js
elog_frontend/src/plugins/: vuetify.js
elog_frontend/src/router/: index.js
elog_frontend/src/services/: app-user-service.js  index.js
elog_frontend/src/store/: index.js  userStore.js
frontend/: README.md
(+4 files in other folders)
