[package]
name = "elog_backend"
version = "0.1.0"
authors = ["Daniel Córdova A. <danesc87@gmail.com>"]
edition = "2018"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
serde = "1.0.116"
diesel = { version = "1.4.5", features = ["mysql"] }
